[package]
name = "steganogan-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.3.1", features = [
  "cudnn",
] }
candle-nn = { git = "https://github.com/huggingface/candle.git", version = "0.3.1", features = [
  "cuda",
] }
image = "0.24.7"
lazy_static = "1.4.0"
miniz_oxide = "0.7.1"
reed-solomon = "0.2.1"
